# intra-model-memval-lab

./: .env.example  .gitignore  GPT2_VERTICAL_SLICE_REPORT.md  LEGACY_REMOVAL_REPORT.md  README.md  REALIGNMENT_REPORT.md  claude.md  pyproject.toml
docs/: ARCHITECTURE.md  DEV_STATUS_ROADMAP.md  EVALUATION_PROTOCOL.md  GPT2_EXPERIMENT_PLAN.md  MIGRATION_NOTES.md  MISSING_POINTS_SCHEMA_AND_PLAN.md  PROJECT_SPEC.md  TARGET_OBJECTIVE.md  correzioni_p0.md
experiments/gpt2_small/configs/: baseline_eval.json  trace_example.json
experiments/gpt2_small/datasets/: synthetic_capitals.json
experiments/gpt2_small/notes/: README.md
experiments/gpt2_small/prompts/: capital_prompt.txt
scripts/: build_dataset.py  export_experiment_snapshot.py
src/intra_model_memval/: __init__.py  cli.py  schemas.py  selection.py  self_eval.py  storage.py
src/intra_model_memval/adapters/: __init__.py  base.py  gpt2_adapter.py
src/intra_model_memval/domain/: __init__.py  models.py
src/intra_model_memval/evaluation/: __init__.py  datasets.py  harness.py  metrics.py
src/intra_model_memval/ingestion/: __init__.py  service.py
src/intra_model_memval/persistence/: __init__.py  store.py
tests/: __init__.py  conftest.py  test_build_dataset_script.py  test_cli.py  test_domain_and_ingestion.py  test_schemas.py  test_selection.py  test_self_eval.py  test_storage.py  test_store_entities.py
tests/fixtures/: __init__.py  fake_model_adapter.py
tests/integration/: test_tracing_and_evaluation.py
tests/unit/: test_adapters.py  test_cli_gpt2.py  test_datasets.py
(+6 files in other folders)
