[project]
name = "intra-model-memval-lab"
version = "0.1.0"
description = "Experiment infrastructure for episode, trace, update and evaluation workflows"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
gpt2 = [
    "torch>=2.2",
    "transformers>=4.40",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
intra-model-exp = "intra_model_memval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intra_model_memval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
